--- a/web/css/signup.css
+++ b/web/css/signup.css
@@ -19,3 +19,42 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     Author     : Tobias Kahse <tobias.kahse@outlook.com>
 */
 
+.form-signup {
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+.form-signup .form-signup-heading,
+.form-signup {
+  margin-bottom: 10px;
+}
+.form-signup {
+  font-weight: normal;
+}
+.form-signup .form-control {
+  position: relative;
+  height: auto;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signup .form-control:focus {
+  z-index: 2;
+}
+.form-signup input.first-child {
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+}
+
+.form-signup input {
+    border-radius: 0;
+    margin-bottom: -1px;
+}
+
+.form-signup input.last-child {
+  margin-bottom: 10px;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
