--- a/web/css/balancesheeteditor.css
+++ b/web/css/balancesheeteditor.css
@@ -1,9 +1,4 @@
-<%-- 
-    Document   : footer
-    Created on : 22.04.2014, 08:27:30
-    Author     : Tobias Kahse <tobias.kahse@outlook.com>
---%>
-<!--
+/*
 Copyright (C) 2014 Tobias Kahse <tobias.kahse@outlook.com>
 
 This program is free software: you can redistribute it and/or modify
@@ -18,11 +13,12 @@ GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
--->
+*/
+/* 
+    Created on : 28.04.2014, 18:36:40
+    Author     : Tobias Kahse <tobias.kahse@outlook.com>
+*/
 
-        <!-- Bootstrap core JavaScript -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script type="text/javascript" src="${baseURL}/js/bootstrap.min.js"></script>
-
-    </body>
-</html>
+.btn-group-vertical {
+    width: 100%;
+}
